[gd_scene load_steps=23 format=3 uid="uid://dmo08twrj3km1"]

[ext_resource type="Script" path="res://Scripts/Summon.gd" id="1_w7sk5"]
[ext_resource type="Texture2D" uid="uid://vuh1vf57hseg" path="res://Assets/Entities.png" id="2_1ww27"]
[ext_resource type="Texture2D" uid="uid://bl4iglcswogmo" path="res://Assets/UI.png" id="3_ee8ts"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o7f3i"]
atlas = ExtResource("2_1ww27")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdgyv"]
atlas = ExtResource("2_1ww27")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dwrn"]
atlas = ExtResource("2_1ww27")
region = Rect2(80, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r4br"]
atlas = ExtResource("2_1ww27")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gil6"]
atlas = ExtResource("2_1ww27")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nc6w"]
atlas = ExtResource("2_1ww27")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cqrv"]
atlas = ExtResource("2_1ww27")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y558a"]
atlas = ExtResource("2_1ww27")
region = Rect2(80, 32, 16, 16)

[sub_resource type="SpriteFrames" id="4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7f3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdgyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dwrn")
}],
"loop": true,
"name": &"Chasing",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r4br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gil6")
}],
"loop": true,
"name": &"Idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nc6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cqrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y558a")
}],
"loop": true,
"name": &"Walk",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xuuvg"]
radius = 2.0
height = 6.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ey5vf"]
radius = 5.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5prcs"]
radius = 1961.56

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s7x0s"]
radius = 5.0
height = 14.0

[sub_resource type="Animation" id="Animation_8cfve"]
resource_name = "HurtBlink"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0001, 0.199541),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.45098, 0.0901961, 0.176471, 0.494118), Color(1, 1, 1, 0.592157)]
}

[sub_resource type="Animation" id="Animation_p43t6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.45098, 0.0901961, 0.176471, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iyx25"]
_data = {
"HurtBlink": SubResource("Animation_8cfve"),
"RESET": SubResource("Animation_p43t6")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_6xtr1"]
atlas = ExtResource("3_ee8ts")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_otivg"]
atlas = ExtResource("3_ee8ts")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_3nbxn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xtr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otivg")
}],
"loop": true,
"name": &"Health",
"speed": 5.0
}]

[node name="Ghost" type="CharacterBody2D" groups=["Summon"]]
z_index = 1
y_sort_enabled = true
collision_layer = 8
collision_mask = 17
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_w7sk5")
speed = 25.0
max_health = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
clip_children = 2
position = Vector2(0, -6)
sprite_frames = SubResource("4")
animation = &"Chasing"

[node name="ColorRect" type="ColorRect" parent="AnimatedSprite2D"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
color = Color(0.45098, 0.0901961, 0.176471, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_xuuvg")

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(0, -6)
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_ey5vf")

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(0, -6)
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_5prcs")

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(0, -6)
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_s7x0s")

[node name="Timers" type="Node" parent="."]

[node name="ChangeState" type="Timer" parent="Timers"]
autostart = true

[node name="MovementTimer" type="Timer" parent="Timers"]
autostart = true

[node name="HurtTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="IdleTimer" type="Timer" parent="Timers"]
wait_time = 0.3
autostart = true

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iyx25")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
target_desired_distance = 5.0
path_postprocessing = 1
debug_enabled = true

[node name="NavigationTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -7.0
offset_top = -16.0
offset_right = 7.0
offset_bottom = 1.0

[node name="HealthContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/separation = 6

[node name="Heart" type="Panel" parent="Control/HealthContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="HeartSprite" type="AnimatedSprite2D" parent="Control/HealthContainer/Heart"]
sprite_frames = SubResource("SpriteFrames_3nbxn")
animation = &"Health"

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_hurt_box_area_exited"]
[connection signal="timeout" from="Timers/ChangeState" to="." method="_on_change_state_timer_timeout"]
[connection signal="timeout" from="Timers/MovementTimer" to="." method="_on_MovementTimer_timeout"]
[connection signal="timeout" from="Timers/IdleTimer" to="." method="_on_IdleTimer_timeout"]
